Setting for libraries

--- a/src/index.pug
+++ b/src/index.pug
@@ -3,5 +3,13 @@ html
   head
     link(rel="stylesheet" href="./stylesheets/main.css")
   body
-    h1 Hello World
+    .container
+      h1.lead.text-center
+        | Hello World 
+        i.glyphicon.glyphicon-heart
+      .row
+        .col-md-12
+          p.text-center Grid1
+
     script(src="./javascripts/main.js")
+
