Fix image capability

--- a/src/index.pug
+++ b/src/index.pug
@@ -5,7 +5,8 @@ html
   body
     .container
       h1.lead.text-center
-        | Hello World 
+        | Hello World
+      img(src="./images/thumbnail.jpg")
 
     script(src="./javascripts/main.js")
 
