--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -7,6 +7,9 @@ body {
   h1 {
     color: purple;
     font-family: sans-serif;
-    margin: 0;
+  }
+  img {
+    width: 600px;
+    margin: 0 auto;
   }
 }
