--- a/src/index.pug
+++ b/src/index.pug
@@ -1,12 +1,12 @@
 doctype html
 html
   head
-    link(rel="stylesheet" href="./stylesheets/main.css")
+    link(rel="stylesheet" href="./assets/stylesheets/main.css")
   body
     .container
       h1.lead.text-center
         | Hello World
-      img(src="./images/thumbnail.jpg")
+      img(src="./assets/images/thumbnail.jpg")
 
-    script(src="./javascripts/main.js")
+    script(src="./assets/javascripts/main.js")
 
