--- a/src/index.pug
+++ b/src/index.pug
@@ -1,12 +1,7 @@
-doctype html
-html
-  head
-    link(rel="stylesheet" href="./assets/stylesheets/main.css")
-  body
-    .container
-      h1.lead.text-center
-        | Hello World
-      img(src="./assets/images/thumbnail.jpg")
+extends _layout
 
-    script(src="./assets/javascripts/main.js")
-
+block content
+  .container
+    h1.lead.text-center
+      | Hello World
+    img(src="./assets/images/thumbnail.jpg")
