--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -7,5 +7,4 @@ block content
   .container
     h1.lead.text-center #{title}
     img(src="../assets/images/thumbnail.jpg")
-    div
-      a(href="/posts/1.html") /posts/1.html
+    include ./partials/menu.pug
