--- a/src/pages/posts/1.pug
+++ b/src/pages/posts/1.pug
@@ -1,8 +1,9 @@
 extends ../_layout.pug
 
 block locals
-  - var title = 'Post #1!';
+  - var title = 'Post #1';
 
 block content
   .container
     h1.lead.text-center #{title}
+    include ../partials/menu.pug
